# Chatbot

./: chatbot.py  config.yaml  loader.py  main.py  pyproject.toml  replit.nix  requirements.txt
faiss_pdf_1/: index.faiss  index.pkl
faiss_url_1/: index.faiss  index.pkl
